--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,26 +7,26 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
-[dependencies.snarkvm]
-git = "https://github.com/AleoHQ/snarkVM"
-branch = "zprize"
+#[dependencies.snarkvm]
+#git = "https://github.com/AleoHQ/snarkVM"
+#branch = "zprize"
 
-[dependencies.snarkvm-algorithms]
-git = "https://github.com/AleoHQ/snarkVM"
-branch = "zprize"
-features = ["cuda"]
+#[dependencies.snarkvm-algorithms]
+#git = "https://github.com/AleoHQ/snarkVM"
+#branch = "zprize"
+#features = ["cuda"]
 
-[dependencies.snarkvm-dpc]
-git = "https://github.com/AleoHQ/snarkVM"
-branch = "zprize"
+#[dependencies.snarkvm-dpc]
+#git = "https://github.com/AleoHQ/snarkVM"
+#branch = "zprize"
 
 [dependencies.snarkvm-utilities]
 git = "https://github.com/AleoHQ/snarkVM"
 branch = "zprize"
 
 [dependencies]
-#snarkvm = { path = "../../src/snarkVM" }
-#snarkvm-algorithms = { path = "../../src/snarkVM/algorithms" }
+snarkvm = { path = "../snarkVM" }
+snarkvm-algorithms = { path = "../snarkVM/algorithms" }
 #snarkvm = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "gpu-index" }
 #snarkvm-algorithms = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "gpu-index" }
 rand = "0.8.5"
